deploy: 7a2dada1345ac673bdba00a36c13e023e0f535f5

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>In the name of Ai ;)</p>
-
-<p><img src="/ai_blogs/images/alan_turing.jpeg" alt="" title="https://github.com/AdityaVarmaUddaraju/ai_blogs" /></p>
+        <div class="home"><p><img src="/ai_blogs/images/alan_turing.jpeg" alt="" title="https://github.com/AdityaVarmaUddaraju/ai_blogs" /></p>
 
 <h1 id="posts">Posts</h1>
 
